# alchemy-manager

./: README.md  pyproject.toml
.github/workflows/: release.yaml
alchemy_manager/: __init__.py  manager.py  models.py
alchemy_manager/queryset/: __init__.py  lookups.py  q.py  queryset.py
alchemy_manager/session/: __init__.py  engine.py  session.py
tests/: conftest.py  models.py  test_engine_and_session.py  test_manager.py  test_model.py  test_queryset.py
